crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_`typing.Final`_-_Full_diagnostics_(174fdd8134fb325b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - `typing.Final` - Full diagnostics
mdtest path: crates/ty_python_semantic/resources/mdtest/type_qualifiers/final.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Final
 2 | 
 3 | MY_CONSTANT: Final[int] = 1
 4 | 
 5 | # more code
 6 | 
 7 | MY_CONSTANT = 2  # error: [invalid-assignment]
 8 | from _stat import ST_INO
 9 | 
10 | ST_INO = 1  # error: [invalid-assignment]
11 | from typing import Final
12 | 
13 | class C:
14 |     x: Final[int] = 1
15 | 
16 |     def f(self):
17 |         self.x = 2  # error: [invalid-assignment]
18 | from typing import Final
19 | 
20 | class C:
21 |     x: Final[int] = 1
22 | 
23 | def __init__(c: C):
24 |     c.x = 2  # error: [invalid-assignment]
25 | from typing import Final
26 | 
27 | class C:
28 |     x: Final[int]  # error: [final-without-value]
29 | 
30 |     def f(self):
31 |         self.x = 2  # error: [invalid-assignment]
32 | from typing import Final
33 | 
34 | class C:
35 |     x: Final[int] = 1
36 | 
37 |     def __init__(self):
38 |         self.x = 2  # error: [invalid-assignment]
39 | from typing import Final
40 | 
41 | class Base:
42 |     x: Final[int] = 1
43 | 
44 | class Child(Base):
45 |     def f(self):
46 |         self.x = 2  # error: [invalid-assignment]
47 | from typing import Final
48 | 
49 | class C:
50 |     x: int
51 | 
52 |     def f(self):
53 |         self.x: Final[int] = 1  # error: [invalid-assignment]
54 | from typing import Final
55 | 
56 | UNINITIALIZED: Final[int]  # error: [final-without-value]
```

# Diagnostics

```
error[invalid-assignment]: Reassignment of `Final` symbol `MY_CONSTANT` is not allowed
 --> src/mdtest_snippet.py:7:1
  |
7 | MY_CONSTANT = 2  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^^^ Symbol later reassigned here
  |
 ::: src/mdtest_snippet.py:3:14
  |
3 | MY_CONSTANT: Final[int] = 1
  |              ---------- Symbol declared as `Final` here
  |

```

```
error[invalid-assignment]: Reassignment of `Final` symbol `ST_INO` is not allowed
  --> src/mdtest_snippet.py:10:1
   |
10 | ST_INO = 1  # error: [invalid-assignment]
   | ^^^^^^^^^^ Reassignment of `Final` symbol
   |

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `Self@f`
  --> src/mdtest_snippet.py:17:9
   |
17 |         self.x = 2  # error: [invalid-assignment]
   |         ^^^^^^ `Final` attributes can only be assigned in the class body or `__init__`
   |
  ::: src/mdtest_snippet.py:14:8
   |
14 |     x: Final[int] = 1
   |        ---------- Attribute declared as `Final` here
   |

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `C`
  --> src/mdtest_snippet.py:24:5
   |
24 |     c.x = 2  # error: [invalid-assignment]
   |     ^^^ `Final` attributes can only be assigned in the class body or `__init__`
   |
  ::: src/mdtest_snippet.py:21:8
   |
21 |     x: Final[int] = 1
   |        ---------- Attribute declared as `Final` here
   |

```

```
error[final-without-value]: `Final` symbol `x` is not assigned a value
  --> src/mdtest_snippet.py:28:5
   |
28 |     x: Final[int]  # error: [final-without-value]
   |     ^^^^^^^^^^^^^
   |

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `Self@f`
  --> src/mdtest_snippet.py:31:9
   |
31 |         self.x = 2  # error: [invalid-assignment]
   |         ^^^^^^ `Final` attributes can only be assigned in the class body or `__init__`
   |
  ::: src/mdtest_snippet.py:28:8
   |
28 |     x: Final[int]  # error: [final-without-value]
   |        ---------- Attribute declared as `Final` here
   |

```

```
error[invalid-assignment]: Invalid assignment to final attribute
  --> src/mdtest_snippet.py:38:9
   |
38 |         self.x = 2  # error: [invalid-assignment]
   |         ^^^^^^ `x` already has a value in the class body
   |
  ::: src/mdtest_snippet.py:35:8
   |
35 |     x: Final[int] = 1
   |        ---------- Attribute declared as `Final` here
   |

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `Self@f`
  --> src/mdtest_snippet.py:46:9
   |
46 |         self.x = 2  # error: [invalid-assignment]
   |         ^^^^^^ `Final` attributes can only be assigned in the class body or `__init__`
   |
  ::: src/mdtest_snippet.py:42:8
   |
42 |     x: Final[int] = 1
   |        ---------- Attribute declared as `Final` here
   |

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `Self@f`
  --> src/mdtest_snippet.py:53:9
   |
53 |         self.x: Final[int] = 1  # error: [invalid-assignment]
   |         ^^^^^^ `Final` attributes can only be assigned in the class body or `__init__`
   |

```

```
error[final-without-value]: `Final` symbol `UNINITIALIZED` is not assigned a value
  --> src/mdtest_snippet.py:56:1
   |
56 | UNINITIALIZED: Final[int]  # error: [final-without-value]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

```
